Arrange cards with css grid

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Organisation",
         "Repify",
-        "Spectranet"
+        "Spectranet",
+        "minmax"
     ]
 }
