--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "serve": "11.3.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "react-scripts start env-cmd -f .env.development",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test env-cmd -f .env.development",
     "eject": "react-scripts eject",
-    "start": "serve -s build",
+    "start": "serve -s build env-cmd -f .env.production",
     "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
