--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "dev": "react-scripts start env-cmd -f .env.development",
-    "build": "react-scripts build",
+    "build": "react-scripts build env-cmd -f .env.production",
     "test": "react-scripts test env-cmd -f .env.development",
     "eject": "react-scripts eject",
     "start": "serve -s build env-cmd -f .env.production",
