--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.0",
     "react-icons": "^3.11.0",
     "react-paystack": "^3.0.2",
     "react-router-dom": "^5.2.0",
