--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "env-cmd": "10.1.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^3.1.3",
