--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "6.9.0",
     "react-icons": "^3.11.0",
+    "react-loader-spinner": "^3.1.14",
     "react-paystack": "^3.0.2",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.3",
